--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
     />
-    <title>Vite + React + TS</title>
+    <title>Portfolio</title>
   </head>
   <body
     class="bg-black text-zinc-200 font-inter overflow-x-hidden scrollbar-track-transparent scrollbar-thumb-slate-900 scrollbar-thin"
